Broken vertex paint undo on high-poly objects #77456

Closed
opened 2020-06-05 17:29:11 +02:00 by Julien Kaspar · 5 comments
Member

System Information
Operating system: Linux-5.3.0-55-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 13:15, hash: blender/blender@0ee98c654e

Short description of error
I encounter the issue while trying to sculpt a head sculpt with ~1 million faces .
The more dense an object is the more likely it is that when undoing paint strokes in vertex paint mode, that it will just not undo them.
It will ignore Ctrl + Z until it eventually undoes everything at once or additionally exits vertex paint mode.

Exact steps for others to reproduce the error

  • Add a UV sphere
  • Subdivide the object 5 times.
  • Enter vertex paint mode and paint a few strokes
  • Then try undo for the paint strokes
**System Information** Operating system: Linux-5.3.0-55-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 13:15, hash: `blender/blender@0ee98c654e` **Short description of error** I encounter the issue while trying to sculpt a head sculpt with ~1 million faces . The more dense an object is the more likely it is that when undoing paint strokes in vertex paint mode, that it will just not undo them. It will ignore Ctrl + Z until it eventually undoes everything at once or additionally exits vertex paint mode. **Exact steps for others to reproduce the error** - Add a UV sphere - Subdivide the object 5 times. - Enter vertex paint mode and paint a few strokes - Then try undo for the paint strokes
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Bastien Montagne was assigned by Julien Kaspar 2020-06-05 17:29:54 +02:00

Confirmed, this is related to new undo in general, not only recent commits in master (i.e. likely also affecting 2.83...). Only workaround for now is to disable new undo in user preferences.

Confirmed, this is related to new undo in general, not only recent commits in master (i.e. likely also affecting 2.83...). Only workaround for now is to disable new undo in user preferences.

This issue was referenced by blender/blender@e4ac4769f1

This issue was referenced by blender/blender@e4ac4769f1cca1900f5dc626eb7eb312e1e93d3d

This issue was referenced by blender/blender@aed11c673e

This issue was referenced by blender/blender@aed11c673efefe509af7abd8cfb8cac000422054

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#77456
No description provided.